--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="/src/style/pagina.css">
     <link rel="stylesheet" href="/src/style/style.css">
 </head>
+
 <body>
     <header>
         <div class="contenitore">
@@ -14,25 +16,36 @@
             <p id="randomColorText" class="coloreCasuale"></p>
             <h2>Scegli il colore giusto</h2>
         </div>
+
+        <div class="leaderboard-container">
+            <h2>Score giocatore</h2>
+            <h3 id="vittorie"></h3>
+            <h3 id="sconfitte"></h3>
+            <button onclick="resettaPunteggio();">Resetta punteggio</button>
+            </button>
+
+
     </header>
 
     <main>
-    <div class="contenitore-globale">
-        <div class="contenitore-colori">
-            <div class="colore-random">Elemento 1</div>
-            <div class="colore-random">Elemento 2</div>
-            <div class="colore-random">Elemento 3</div>
+        <div class="contenitore-globale">
+            <div class="contenitore-colori">
+                <div class="colore-random">Elemento 1</div>
+                <div class="colore-random">Elemento 2</div>
+                <div class="colore-random">Elemento 3</div>
+            </div>
+            <div class="contenitore-colori-bottom">
+                <div class="colore-random">Elemento 4</div>
+                <div class="colore-random">Elemento 5</div>
+            </div>
         </div>
-        <div class="contenitore-colori-bottom">
-            <div class="colore-random">Elemento 4</div>
-            <div class="colore-random">Elemento 5</div>
-        </div>
-    </div>
     </main>
 
-    
+
+
 
 
     <script src="/src/script.js"></script>
 </body>
+
 </html>
