--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gioco colori</title>
-    <link rel="stylesheet" href="/src/style/pagina.css">
-    <link rel="stylesheet" href="/src/style/style.css">
+    <link rel="stylesheet" href="/pagina.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
@@ -21,10 +21,10 @@
             <h2>Score giocatore</h2>
             <h3 id="vittorie"></h3>
             <h3 id="sconfitte"></h3>
+            <h3 id="ultimaVittorie"></h3>
             <button onclick="resettaPunteggio();">Resetta punteggio</button>
             </button>
-
-
+        </div>
     </header>
 
     <main>
@@ -41,11 +41,7 @@
         </div>
     </main>
 
-
-
-
-
-    <script src="/src/script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
